# RECAL

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  recal_0.2.0.tar
.github/workflows/: ci.yml
adapt/: CHANGELOG.md  OPEN_QUESTIONS.md  README.md  __init__.py
adapt/designer/: __init__.py  base.py  rules.py  selector.py
adapt/pipeline/: __init__.py  auto_adapter.py
adapt/profiler/: __init__.py  base.py  constants.py  feature_profiler.py  global_profiler.py  profiler.py  quadrant.py
adapt/reporter/: __init__.py  figures.py  html_report.py  tables.py
adapt/tests/: __init__.py  test_auto_adapter.py  test_dataset_shift_invariance.py  test_designer_rules.py  test_profiler.py  test_validation_snuh_clinic.py
adapt_cli/: __init__.py  config_schema.py  cross_validate.py  data_loader.py  drift_compute.py  model_loader.py  run.py
configs/: example_snuh_to_clinic.yaml  exp_extend.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DRIFT_REPORT.md  MODEL_FORMAT.md  OPEN_QUESTIONS.md  OVERFITTING.md  TESTING.md  USAGE.md
domain_transfer/: README.md  __init__.py
domain_transfer/align/: __init__.py  adabn.py  base.py  coral.py  identity.py  optimal_transport.py  pca_coral.py  quantile_transform.py  selective.py
domain_transfer/calibration/: __init__.py  stratified_platt.py
domain_transfer/cli/: __init__.py
domain_transfer/data/: __init__.py  base.py  clinic.py  pairing.py  schema.py  snuh.py
domain_transfer/drift/: __init__.py  analyzer.py  concept_shift_univariate.py
domain_transfer/eval/: __init__.py
domain_transfer/select/: __init__.py  combined_score.py  meta_drift.py  sweep.py  woe_encoder.py
inputs/: feature_schema.json
outputs/cache/: drift_decomposition.csv
outputs/reports/: snuh_to_clinic.html  snuh_to_clinic.metrics.json
recal/: __init__.py
recal/align/: __init__.py  adabn.py  base.py  coral.py  identity.py  optimal_transport.py  pca_coral.py  quantile_transform.py  selective.py
recal/calibration/: __init__.py  stratified_platt.py
recal/cli/: __init__.py
recal/data/: __init__.py  base.py  clinic.py  pairing.py  schema.py  snuh.py
recal/drift/: __init__.py  analyzer.py  concept_shift_univariate.py
recal/eval/: __init__.py
recal/model/: __init__.py  xgboost_wrapper.py
recal/select/: __init__.py  combined_score.py  meta_drift.py  sweep.py  woe_encoder.py
recal_cli/: __init__.py  audit_serializer.py  calibration_decomposition.py  config_schema.py  counterfactuals.py  cross_validate.py  data_loader.py  drift_attribution.py  drift_compute.py  joint_drift.py  model_loader.py  oracle.py  patient_profiles.py  pipeline_preprocessor.py  run.py
recal_core/: __init__.py  designer_audit.py
recal_core/designer/: __init__.py  base.py  rules.py  selector.py
recal_core/pipeline/: __init__.py  auto_adapter.py
recal_core/profiler/: __init__.py  base.py  constants.py  feature_profiler.py  global_profiler.py  profiler.py  quadrant.py
recal_core/reporter/: __init__.py  figures.py  html_report.py  tables.py
recal_core/tests/: __init__.py  test_auto_adapter.py  test_dataset_shift_invariance.py  test_designer_rules.py  test_e2e_synthetic.py  test_profiler.py  test_validation_snuh_clinic.py
recal_core/tests/data/: synthetic_model.json  synthetic_schema.json  synthetic_source.csv  synthetic_target.csv
synthetic_data/: generate_report.py  generate_synthetic.py  generate_transfer.py  run_recal.py  synthetic_features.csv  synthetic_transfer.csv  train_models.py
synthetic_data/models/: feature_schema.json  nn_model.joblib  xgb_model.json
synthetic_data/recal/: adapted_model.joblib  adapter_config.json  drift_profile.json  metrics_summary.json  recal_report.html
synthetic_data/reports/: cross_domain_report.html
tests/: conftest.py  test_coral.py  test_joint_drift.py  test_new_modules.py  test_reproduces_legacy.py  test_select.py
