[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recal"
version = "0.2.0"
description = "Recalibration and alignment wrapper for frozen binary predictive models across clinical domains without retraining"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ramses Marrero Garcia", email = "ramses@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "xgboost>=1.7",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "shap>=0.42",
    "POT>=0.9",
    "typer>=0.9",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pyarrow>=12.0",
    # joint_drift: VIF/effective-rank analysis uses statsmodels for optional
    # OLS path; sklearn.covariance.LedoitWolf is already in scikit-learn>=1.3.
    # statsmodels is optional — recal_cli.joint_drift uses numpy directly.
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.0", "mypy>=1.8"]

[project.scripts]
recal = "recal.cli.main:app"

[project.urls]
Homepage = "https://github.com/ramsestein/RECAL"
Repository = "https://github.com/ramsestein/RECAL.git"
Issues = "https://github.com/ramsestein/RECAL/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["recal*", "recal_core*", "recal_cli*"]

# ── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]
ignore = [
    "N803", "N806",   # allow uppercase variable names (matrices)
    "N802",           # allow lowercase/mixed function names (math conventions)
    "N814", "N815", "N817",  # naming conventions for imported symbols
    "E741",           # allow l, O, I as variable names (math/stats)
    "E501",           # line length managed per-file; 100-char limit catches obvious cases
]

[tool.ruff.lint.isort]
known-first-party = ["recal", "recal_core", "recal_cli"]

# ── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_return_any = false

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require loading real data (skip with -m 'not slow')",
]
